<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_head">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/ll_1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/Do"
                android:id="@+id/btDo"
                android:layout_weight="1"
                android:onClick="clicOnButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Re"
                android:id="@+id/btRe"
                android:layout_weight="1"
                android:onClick="clicOnButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Mi"
                android:id="@+id/btMi"
                android:layout_weight="1"
                android:onClick="clicOnButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Fa"
                android:id="@+id/btFa"
                android:layout_weight="1"
                android:onClick="clicOnButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Sol"
                android:id="@+id/btSol"
                android:layout_weight="1"
                android:onClick="clicOnButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/La"
                android:id="@+id/btLa"
                android:layout_weight="1"
                android:onClick="clicOnButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Si"
                android:id="@+id/btSi"
                android:layout_weight="1"
                android:onClick="clicOnButton" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/ll_2">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView"
                    android:autoText="false"
                    android:layout_weight="1"
                    android:isScrollContainer="true"/>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
